# panopticon

./: Cargo.toml  README.md  benchmarks.md  docker-compose.yaml  openapi-config.yaml  scenario_runner_openapi.json
scenario-runner/: Cargo.toml  README.md
scenario-runner/.openapi-generator/: FILES
scenario-runner/docs/: CustomerDto.md  ResponseMessage.md  ScenarioDto.md  ScenarioMetadataDto.md  StandardMagentaVehicleDto.md  VehicleDataDto.md
scenario-runner/src/apis/: configuration.rs
scenario-runner/src/models/: customer_dto.rs  mod.rs  response_message.rs  scenario_dto.rs  scenario_metadata_dto.rs  standard_magenta_vehicle_dto.rs  vehicle_data_dto.rs
src/: api_wrapper.rs  handler.rs  main.rs  scenario.rs  scenario_manager.rs  scenario_solver.rs
src/dashboard/: example.json  index.html  package-lock.json  package.json
src/dashboard/src/: App.css  App.tsx  config.ts  index.css
src/dashboard/src/components/: WebSocketContext.tsx  bar-chart.tsx  control-panel.tsx  line-chart.tsx  map.tsx  pie-chart.tsx  radial-chart.tsx  selection-screen.tsx  top-bar.tsx
src/dashboard/src/hooks/: WebSocketContext.tsx
src/dashboard/src/lib/: utils.ts
src/dashboard/src/model/: message.ts  models.ts
src/solvers/: mod.rs  nearest.rs  random.rs  tree.rs
