[package]
name = "panopticon"
version = "0.1.0"
edition = "2021"

[dependencies]
scenario-runner = { path = "./scenario-runner" }
actix-cors = "0.7.0"
actix-web = "4.9.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
uuid = "1.11.0"
reqwest = "0.12.9"
anyhow = "1.0.93"
